----------------------------------
SimpleMail Open Source - ChangeLog
----------------------------------

2007-09-01  Bernd Gollesch <bgollesch@sime.at>
	* amiga-mui/datatypescache.c, configuration.c, configuration.h,
	  doc/amiga/SimpleMail.guide: Added hidden config option "Don't use AISS".

2007-08-25  Bernd Gollesch <bgollesch@sime.at>
	* amiga-mui/datatypescache.c: Corrected some bugs. The cache wasn't working at all.
	* amiga-mui/mailtreelistclass-new.c: Checked for the wrong value in MUIKEY_PRESS.

2007-02-25  Bernd Gollesch <bgollesch@sime.at>
	* amiga-mui/mailtreelistclass-new.c: The PrepareDisplayedColumns() function must be
	  called after the titlemenu is build.

2007-02-23  Bernd Gollesch <bgollesch@sime.at>
	* amiga-mui/mailtreelistclass-new.c: Added the "Default Order" contextmenu function.
	  Added a CheckColumnsOrder() function because NList doesn't export hidden columns.
	  Added CalcEntries() call after titlemenu selection because if a columns was hidden
	  the width wasn't calculated.

2007-02-17  Bernd Gollesch <bgollesch@sime.at>
	* amiga-mui/datatypescache.c: Also check if there is a masonname available before
	  trying to open it.
	* amiga-mui/mailtreelistclass-new.c: Added the Import/Export method to the mailtree
	  which can also read in the old NList settings (only column width and order, bugfix #1657900).
	  Added the possibility to change the column order in the code. Right now it can't
	  be done but the old NList setting will be honored.

2007-02-14  Bernd Gollesch <bgollesch@sime.at>
	* amiga-mui/mailtreelistclass-new.c: Don't show autospam marked messages in bold.
	  Added more muikeys for keyboard navigation.
	* folder.c: Added reverse sorting for Filename and POP3 Server column.
	  Only the FOLDER_TYPE_SEND does show the "To" address in the mailtree.
	  Don't call the secondary compare function if it is the same as the primary.

2007-02-13  Bernd Gollesch <bgollesch@sime.at>